<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StartButtonSyle"
        android:text="@string/licensedroid_activity"/>

    <Button
        android:id="@+id/custom_viewholder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StartButtonSyle"
        android:text="@string/licensedroid_custom_viewholder"/>

    <Button
        android:id="@+id/expandable_viewholder_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StartButtonSyle"
        android:text="@string/licensedroid_expandable_viewholder"/>

    <Button
        android:id="@+id/fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StartButtonSyle"
        android:text="@string/licensedroid_fragment"/>

    <Button
        android:id="@+id/dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StartButtonSyle"
        android:text="@string/licensedroid_dialog"/>

</LinearLayout>